--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
       <div class="col-md-6">
         <h2>Organizations listed:</h2>
         <p>
-          Peer support groups listed include groups from the organizations <a href="yarrowcollective.org/" target="_blank">The Yarrow Collective</a>,
-          <a href="https://wildfloweralliance.org/" target="_blank">Wildflower Alliance</a>, <a href="https://peersupportspace.org/" target="_blank">Peer Support Space</a>, <a href="https://genderendersmeet.net/" target="_blank">G.E.M. (Gender Enders Meet)</a>, <a href="https://www.instagram.com/mutual_aid_social_therapy/" target="_blank">Mutual Aid Social Therapy (MAST)</a>, and <a href="callbubbie.org" target="_blank">Call Bubbie</a>.
+          Peer support groups listed include groups from the organizations <a href="yarrowcollective.org">The Yarrow Collective</a>,
+          <a href="wildfloweralliance.org/">Wildflower Alliance</a>, <a href="peersupportspace.org">Peer Support Space</a>, <a href="https://genderendersmeet.net/">G.E.M. (Gender Enders Meet)</a>, <a href="https://www.instagram.com/mutual_aid_social_therapy/">Mutual Aid Social Therapy (MAST)</a>, and <a href="callbubbie.org">Call Bubbie</a>.
         </p>
       </div>
     </div>
